# griptape-nodes-library-openassetio

./: .editorconfig  .env.example  .gitignore  .gitlint  .mcp.json  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  griptape_nodes_library.json  pyproject.toml
.github/workflows/: ci.yml  version-bump-minor.yml  version-bump-patch.yml  version-publish.yml
griptape_nodes_library_openassetio/: __init__.py  is_entity_reference_node.py  library_hooks.py  resolve_entity.py  resolve_entity_node.py  session.py  session_node.py  trait_catalogue.py
tests/: __init__.py  conftest.py  ruff.toml
tests/integration/: __init__.py  conftest.py  test_is_entity_reference_node.py  test_resolve_entity_node.py  test_resolve_entity_node_dynamic_params.py  test_session.py  test_trait_catalogue.py
tests/resources/: openassetio.config.bal.minimal.toml  openassetio.config.bal.resolve.toml  test_traits.yml
tests/unit/: __init__.py  test_is_entity_reference_node.py  test_library_hooks.py  test_resolve_entity.py  test_resolve_entity_node.py  test_session.py  test_session_node.py  test_trait_catalogue.py
